syntax = "proto3";
package proto;
option go_package = ".";

message User {
  string UserID = 1;
  string Username = 2 ;
  string Email = 3;
  string password = 4;
}

service UserService{
  rpc CreateUser(CreateUserReq) returns (CreateUserRes);
  rpc GetUser(GetUserReq) returns (GetUserRes);
  rpc GetALlUsers(GetAllUsersReq) returns (GetAllUsersRes);
  rpc UpdateUser(UpdateUserReq) returns (UpdateUserRes);
  rpc DeleteUser(DeleteUserReq) returns (DeleteUserRes);
}

message CreateUserReq{User user = 1;}
message CreateUserRes{User user = 1;}

message GetUserReq{string UserID = 1;}
message GetUserRes{User user = 1;}

message GetAllUsersReq{}
message GetAllUsersRes{repeated User user = 1;}

message UpdateUserReq{User user = 1;}
message UpdateUserRes{User user = 1;}

message DeleteUserReq{string UserID = 1;}
message DeleteUserRes{User user = 1;}